@@ -14,8 +14,9 @@ Thanks to Matthieu Casanova, Dale Anson and  Matthew Gilbert for contributing to
 }}}
 {{{ Editing
 
-- Applied patch from Matthew Gilbert to add ability to increase/decrease line spacing in the text area. (#3023134, Dale Anson)
+-Applied patch from Matthew Gilbert to add ability to increase/decrease line spacing in the text area. (#3023134, Dale Anson)
 
+-Added jflex edit mode (Matthieu Casanova)
 }}}
 }}}
 
